Bug 161261 - Instead of resizing, the image loses its original size in fixed-height table cell
Summary: Instead of resizing, the image loses its original size in fixed-height table ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords:
Depends on:
Blocks: Writer-Tables Cell-Management Authors
  Show dependency treegraph
 
Reported: 2024-05-24 13:45 UTC by László Németh
Modified: 2024-06-04 09:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-05-24 13:45:10 UTC
Description:
Resizing images doesn't work in fixed-height table cells, if the image is bigger, than the size of the table cell.

Steps to Reproduce:
1. Open the test document of Bug 160836 (https://bugs.documentfoundation.org/attachment.cgi?id=193871).
2. Click on the image to get its handles. The image is bigger, than the table cell.
3. Try to resize the image with its bottom right handle.

Actual Results:
The size if the image changed to the size of the cell, and it's not possible to zoom it any more.

Expected Results:
Keeping its original size, allowing to resize/zoom.


Reproducible: Always


User Profile Reset: No

Additional Info:
This is a MSO interoperability feature, see also Bug 160836.
Comment 1 Commit Notification 2024-05-24 17:47:40 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4da6f52f5fd164082fd42fc58fc7d31da567c924

tdf#161261 sw: fix lost size of image resized in fixed-height cell

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-05-29 08:39:22 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db94d1079a83eae9ac0c8d92f4547698d016daf8

Revert "tdf#161261 sw: fix lost size of image resized in fixed-height cell"

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-05-29 21:44:15 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dece7d80c31c3c489859200bc93d9c948a535cbf

tdf#161261 sw: fix lost size of image resized in fixed-height cell

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-06-04 09:16:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c7402930ed73602bfbaefd86abb1571458ff6cca

tdf#161261 sw: fix lost size of image resized in fixed-height cell

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.