tdf#161261 sw: fix lost size of image resized in fixed-height cell

A fixed-height cell can contain a bigger image, which is cropped by
cell boundaries. It was not possible to resize this image with a simple drag & drop, because its size changed to the cell size immediately.
Now it's possible, like MSO does.

Follow-up to commit 30de13743f144aced83bc43d310592f82788c910
"tdf#160836 sw: resize rows at images cropped by row height".

Change-Id: I6b4e911432e784a96d393ee225ce69a1f2986d56
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168186
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit dece7d80c31c3c489859200bc93d9c948a535cbf)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168196
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>